--- a/RTSFramework/RTSFramework.GUI/MainWindow.xaml
+++ b/RTSFramework/RTSFramework.GUI/MainWindow.xaml
@@ -116,8 +116,12 @@
 			<TextBox x:Name="TbClassName" Height="24" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding ClassNameFilter}" Grid.Row="1" Grid.Column="1"/>
 			<TextBox x:Name="TbCategory" Height="24" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding CategoryFilter}" Grid.Row="0" Grid.Column="3"/>
 		</Grid>
-
-		<DataGrid x:Name="DgTests" IsReadOnly="True" AutoGenerateColumns="False" Margin="5,0,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" ItemsSource="{Binding TestResults}"
+		<Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*"/>
+				<RowDefinition Height="28"/>
+			</Grid.RowDefinitions>
+			<DataGrid x:Name="DgTests" IsReadOnly="True" AutoGenerateColumns="False" Margin="5,0,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ItemsSource="{Binding TestResults}"
 				  ScrollViewer.CanContentScroll="True" 
 				  ScrollViewer.VerticalScrollBarVisibility="Auto"
 				  ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -125,67 +129,70 @@
 				  SelectionMode="Single"
 				  SelectedItem="{Binding SelectedTest}">
 
-			<DataGrid.ItemContainerStyle >
-				<Style TargetType="DataGridRow" >
-					<Setter Property="ContextMenu">
-						<Setter.Value>
-							<ContextMenu>
-								<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
-								<MenuItem Header="Show Error Message" Command="{Binding ShowErrorMessageCommand}" />
-								<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
-								<MenuItem Header="Responsible Changes" Command="{Binding ShowResponsibleChangesCommand}" />
-							</ContextMenu>
-						</Setter.Value>
-					</Setter>
-					<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
-					<Setter Property="behaviors:HandleDoubleClickBehavior.Command" Value="{Binding ShowErrorMessageCommand}" />
-				</Style>
-			</DataGrid.ItemContainerStyle>
-			<DataGrid.RowDetailsTemplate>
-				<DataTemplate DataType="viewModels:TestResultListViewItemViewModel">
-					<DataGrid IsReadOnly="True" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding ChildResults}" SelectedItem="{Binding SelectedChild}">
-						<DataGrid.ItemContainerStyle >
-							<Style TargetType="DataGridRow" >
-								<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
-								<Setter Property="behaviors:HandleDoubleClickBehavior.Command" Value="{Binding ShowErrorMessageCommand}" />
+				<DataGrid.ItemContainerStyle >
+					<Style TargetType="DataGridRow" >
+						<Setter Property="ContextMenu">
+							<Setter.Value>
+								<ContextMenu>
+									<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
+									<MenuItem Header="Show Error Message" Command="{Binding ShowErrorMessageCommand}" />
+									<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
+									<MenuItem Header="Responsible Changes" Command="{Binding ShowResponsibleChangesCommand}" />
+								</ContextMenu>
+							</Setter.Value>
+						</Setter>
+						<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
+						<Setter Property="behaviors:HandleDoubleClickBehavior.Command" Value="{Binding ShowErrorMessageCommand}" />
+					</Style>
+				</DataGrid.ItemContainerStyle>
+				<DataGrid.RowDetailsTemplate>
+					<DataTemplate DataType="viewModels:TestResultListViewItemViewModel">
+						<DataGrid IsReadOnly="True" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding ChildResults}" SelectedItem="{Binding SelectedChild}">
+							<DataGrid.ItemContainerStyle >
+								<Style TargetType="DataGridRow" >
+									<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
+									<Setter Property="behaviors:HandleDoubleClickBehavior.Command" Value="{Binding ShowErrorMessageCommand}" />
+								</Style>
+							</DataGrid.ItemContainerStyle>
+							<DataGrid.Columns>
+								<DataGridTextColumn Width="270" Header="Display Name" Binding="{Binding DisplayName}" />
+								<DataGridTemplateColumn Width="200" Header ="Outcome" CellTemplate="{StaticResource TestOutcomePresenter}" SortMemberPath="TestOutcome" CanUserSort="True" />
+								<DataGridTextColumn Width="100" Header="StartTime" Binding="{Binding StartTime, Converter={converters:DateTimeWithTimeConverter}}" />
+								<DataGridTextColumn Width="100" Header="EndTime" Binding="{Binding EndTime, Converter={converters:DateTimeWithTimeConverter}}" />
+								<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
+							</DataGrid.Columns>
+						</DataGrid>
+					</DataTemplate>
+				</DataGrid.RowDetailsTemplate>
+				<DataGrid.Columns>
+					<DataGridTemplateColumn>
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate DataType="viewModels:TestResultListViewItemViewModel">
+								<Button Margin="2,0,2,0" Background="Transparent" Click="ShowHideDetails" Visibility="{Binding HasChildResults, Converter={converters:VisibilityConverter}}" >
+									<Image Width="16" Source="{Binding AreChildResultsShown, Converter={converters:CollapseExpandImageConverter}}" />
+								</Button>
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+					<DataGridTextColumn Width="35" Header="No." Binding="{Binding ExecutionId}">
+						<DataGridTextColumn.ElementStyle>
+							<Style>
+								<Setter Property="TextBlock.TextAlignment" Value="Right" />
 							</Style>
-						</DataGrid.ItemContainerStyle>
-						<DataGrid.Columns>
-							<DataGridTextColumn Width="270" Header="Display Name" Binding="{Binding DisplayName}" />
-							<DataGridTemplateColumn Width="200" Header ="Outcome" CellTemplate="{StaticResource TestOutcomePresenter}" SortMemberPath="TestOutcome" CanUserSort="True" />
-							<DataGridTextColumn Width="100" Header="StartTime" Binding="{Binding StartTime, Converter={converters:DateTimeWithTimeConverter}}" />
-							<DataGridTextColumn Width="100" Header="EndTime" Binding="{Binding EndTime, Converter={converters:DateTimeWithTimeConverter}}" />
-							<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
-						</DataGrid.Columns>
-					</DataGrid>
-				</DataTemplate>
-			</DataGrid.RowDetailsTemplate>
-			<DataGrid.Columns>
-				<DataGridTemplateColumn>
-					<DataGridTemplateColumn.CellTemplate>
-						<DataTemplate DataType="viewModels:TestResultListViewItemViewModel">
-							<Button Margin="2,0,2,0" Background="Transparent" Click="ShowHideDetails" Visibility="{Binding HasChildResults, Converter={converters:VisibilityConverter}}" >
-								<Image Width="16" Source="{Binding AreChildResultsShown, Converter={converters:CollapseExpandImageConverter}}" />
-							</Button>
-						</DataTemplate>
-					</DataGridTemplateColumn.CellTemplate>
-				</DataGridTemplateColumn>
-				<DataGridTextColumn Width="35" Header="No." Binding="{Binding ExecutionId}">
-					<DataGridTextColumn.ElementStyle>
-						<Style>
-							<Setter Property="TextBlock.TextAlignment" Value="Right" />
-						</Style>
-					</DataGridTextColumn.ElementStyle>
-				</DataGridTextColumn>
-				<DataGridTextColumn Width="150" Header="Class Name" Binding="{Binding FullClassName}" />
-				<DataGridTextColumn Width="100" Header="Test Case Name" Binding="{Binding Name}" />
-				<DataGridTemplateColumn Width="100" Header ="Outcome" CellTemplate="{StaticResource TestOutcomePresenter}"  SortMemberPath="TestOutcome" CanUserSort="True" />
-				<DataGridTextColumn Width="100" Header="Categories" Binding="{Binding Categories}"/>
-				<DataGridTextColumn Width="100" Header="StartTime" Binding="{Binding StartTime, Converter={converters:DateTimeWithTimeConverter}}" />
-				<DataGridTextColumn Width="100" Header="EndTime" Binding="{Binding EndTime, Converter={converters:DateTimeWithTimeConverter}}" />
-				<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
-			</DataGrid.Columns>
-		</DataGrid>
+						</DataGridTextColumn.ElementStyle>
+					</DataGridTextColumn>
+					<DataGridTextColumn Width="150" Header="Class Name" Binding="{Binding FullClassName}" />
+					<DataGridTextColumn Width="100" Header="Test Case Name" Binding="{Binding Name}" />
+					<DataGridTemplateColumn Width="100" Header ="Outcome" CellTemplate="{StaticResource TestOutcomePresenter}"  SortMemberPath="TestOutcome" CanUserSort="True" />
+					<DataGridTextColumn Width="100" Header="Categories" Binding="{Binding Categories}"/>
+					<DataGridTextColumn Width="100" Header="StartTime" Binding="{Binding StartTime, Converter={converters:DateTimeWithTimeConverter}}" />
+					<DataGridTextColumn Width="100" Header="EndTime" Binding="{Binding EndTime, Converter={converters:DateTimeWithTimeConverter}}" />
+					<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
+				</DataGrid.Columns>
+			</DataGrid>
+			<Button Grid.Row="1" x:Name="BtnVisualizeDependencies" Content="Visualize Dependencies" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Command="{Binding VisualizeDependenciesCommand}" Height="20" IsEnabled="{Binding DependenciesVisualizationAvailable}"/>
+		</Grid>
+		
 		<StatusBar  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Background="{StaticResource BackgroundColor}">
 			<StatusBar.ItemsPanel>
 				<ItemsPanelTemplate>
