--- a/RTSFramework/RTSFramework.GUI/MainWindow.xaml
+++ b/RTSFramework/RTSFramework.GUI/MainWindow.xaml
@@ -121,7 +121,12 @@
 				<RowDefinition Height="*"/>
 				<RowDefinition Height="28"/>
 			</Grid.RowDefinitions>
-			<DataGrid x:Name="DgTests" IsReadOnly="True" AutoGenerateColumns="False" Margin="5,0,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ItemsSource="{Binding TestResults}"
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="*"/>
+			</Grid.ColumnDefinitions>
+			<DataGrid Grid.ColumnSpan="3" x:Name="DgTests" IsReadOnly="True" AutoGenerateColumns="False" Margin="5,0,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ItemsSource="{Binding TestResults}"
 				  ScrollViewer.CanContentScroll="True" 
 				  ScrollViewer.VerticalScrollBarVisibility="Auto"
 				  ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -190,7 +195,8 @@
 					<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
 				</DataGrid.Columns>
 			</DataGrid>
-			<Button Grid.Row="1" x:Name="BtnVisualizeDependencies" Content="Visualize Dependencies" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Command="{Binding VisualizeDependenciesCommand}" Height="20" IsEnabled="{Binding DependenciesVisualizationAvailable}"/>
+			<Button Grid.Row="1" Grid.Column="0" x:Name="BtnVisualizeDependencies" Content="Visualize Dependencies" HorizontalAlignment="Center" Margin="5,5,0,0" VerticalAlignment="Top" Command="{Binding VisualizeDependenciesCommand}" Height="20" IsEnabled="{Binding DependenciesVisualizationAvailable}"/>
+			<Button Grid.Row="1" Grid.Column="1" x:Name="BtnAveragePercentageImpactedTests" Content="Report collected statistics" HorizontalAlignment="Center" Margin="5,5,0,0" VerticalAlignment="Top" Command="{Binding ReportCollectedStatisticsCommand}" Height="20" />
 		</Grid>
 		
 		<StatusBar  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Background="{StaticResource BackgroundColor}">
