--- a/RTSFramework/RTSFramework.GUI/MainWindow.xaml
+++ b/RTSFramework/RTSFramework.GUI/MainWindow.xaml
@@ -11,7 +11,7 @@
         xmlns:behaviors="clr-namespace:RTSFramework.GUI.Behaviors"
         mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}"
-        Title="RTS Framework" Height="600" Width="835" Icon="Resources/testselection.ico" MinWidth="525" MinHeight="350" Background="{StaticResource BackgroundColor}" BorderBrush="{StaticResource BorderColor}" WindowStartupLocation="CenterScreen">
+        Title="RTS Framework" Height="600" Width="950" Icon="Resources/testselection.ico" MinWidth="525" MinHeight="350" Background="{StaticResource BackgroundColor}" BorderBrush="{StaticResource BorderColor}" WindowStartupLocation="CenterScreen">
 	<Window.Resources>
 		<DataTemplate x:Key="TestOutcomePresenter" DataType="viewModels:TestResultListViewItemViewModel">
 			<Grid>
@@ -23,6 +23,10 @@
 				<TextBlock Text="{Binding TestOutcome}" Grid.Column="1" Margin="5,0,0,0"/>
 			</Grid>
 		</DataTemplate>
+		<Style TargetType="{x:Type ComboBox}">
+			<Setter Property="Height" Value="30" />
+			<Setter Property="VerticalContentAlignment" Value="Center"/>
+		</Style>
 	</Window.Resources>
 
 	<Window.TaskbarItemInfo>
@@ -30,16 +34,16 @@
 	</Window.TaskbarItemInfo>
 	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="200"/>
-			<ColumnDefinition Width="200"/>
+			<ColumnDefinition Width="220"/>
+			<ColumnDefinition Width="220"/>
 			<ColumnDefinition Width="*"/>
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="50"/>
-			<RowDefinition Height="230"/>
-			<RowDefinition Height="100"/>
+			<RowDefinition Height="35"/>
+			<RowDefinition Height="240"/>
+			<RowDefinition Height="80"/>
 			<RowDefinition Height="278*"/>
-			<RowDefinition Height="25"/>
+			<RowDefinition Height="40"/>
 			<RowDefinition/>
 		</Grid.RowDefinitions>
 		<Button x:Name="BtnStartRun" Content="Start Run" HorizontalAlignment="Stretch" Margin="5,5,0,0" VerticalAlignment="Top" Command="{Binding StartRunCommand}" Grid.Row="0" Grid.Column="0" IsEnabled="{Binding IsRunning, Converter={converters:InverseBooleanConverter}}"/>
@@ -52,10 +56,9 @@
 				<RowDefinition Height="28*"/>
 				<RowDefinition Height="28*"/>
 				<RowDefinition Height="28*"/>
-				<RowDefinition Height="28*"/>
 			</Grid.RowDefinitions>
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="115*"/>
+				<ColumnDefinition Width="150*"/>
 				<ColumnDefinition Width="230*"/>
 				<ColumnDefinition Width="230*"/>
 				<ColumnDefinition Width="230*"/>
@@ -85,10 +88,10 @@
 			<TextBox x:Name="TbRepositoryPath" VerticalContentAlignment="Center" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding RepositoryPath}" Visibility="{Binding IsRepositoryPathChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Margin="0,0,30,0" Grid.Column="3"  Grid.Row="1" />
 			<Button x:Name="BtnSelectRepositoryPath" Command="{Binding SelectRepositoryCommand}" Content="..." HorizontalAlignment="Right" VerticalAlignment="Center" Visibility="{Binding IsRepositoryPathChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Column="3" Width="25" Grid.Row="1" />
 
-			<Button x:Name="BtnIntendedChanges" Command="{Binding SpecitfyIntendedChangesCommand}" Content="Intended Changes" HorizontalAlignment="Stretch" VerticalAlignment="Center" Visibility="{Binding IsIntededChangesEditingEnabled, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Column="2" Grid.Row="3" />
+			<Button x:Name="BtnIntendedChanges" Command="{Binding SpecitfyIntendedChangesCommand}" Content="Intended Changes" HorizontalAlignment="Stretch" VerticalAlignment="Center" Visibility="{Binding IsIntededChangesEditingEnabled, Converter={converters:VisibilityConverter}, Mode=OneWay}" Margin="5,0,0,0"  Grid.Column="2" Grid.Row="3" />
 
 			<TextBox x:Name="TbCsvTestsFile" VerticalContentAlignment="Center" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding CsvTestsFile}" Visibility="{Binding IsCsvTestsFileSelectable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Margin="2,0,30,0" Grid.Column="2"  Grid.Row="2" />
-			<Button x:Name="BtnSelectCsvTestsFile" Command="{Binding SelectCsvTestsFileCommand}" Content="..." HorizontalAlignment="Right" VerticalAlignment="Center" Visibility="{Binding IsCsvTestsFileSelectable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Column="2"  Grid.Row="2" />
+			<Button x:Name="BtnSelectCsvTestsFile" Command="{Binding SelectCsvTestsFileCommand}" Content="..." HorizontalAlignment="Right" VerticalAlignment="Center" Visibility="{Binding IsCsvTestsFileSelectable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Width="25" Grid.Column="2"  Grid.Row="2" />
 
 			<ComboBox x:Name="CbFromCommit" VerticalAlignment="Center" ItemsSource="{Binding FromCommitModels}" SelectedItem="{Binding FromCommit}" Visibility="{Binding IsFromCommitChangeable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="3" Grid.Column="2" Margin="2,0,2,0" DisplayMemberPath="DisplayName" />
 			<ComboBox x:Name="CbToCommit" VerticalAlignment="Center" ItemsSource="{Binding ToCommitModels}" SelectedItem="{Binding ToCommit}" Visibility="{Binding IsToCommitChangeable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="3" Grid.Column="3" Margin="2,0,2,0" DisplayMemberPath="DisplayName" />
@@ -99,11 +102,11 @@
 		</Grid>
 		<Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,5,5,5" IsEnabled="{Binding IsRunning, Converter={converters:InverseBooleanConverter}}" >
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="115*"/>
-				<ColumnDefinition Width="115*"/>
-				<ColumnDefinition Width="115*"/>
-				<ColumnDefinition Width="115*"/>
-				<ColumnDefinition Width="115*"/>
+				<ColumnDefinition Width="150*"/>
+				<ColumnDefinition Width="230*"/>
+				<ColumnDefinition Width="100*"/>
+				<ColumnDefinition Width="130*"/>
+				<ColumnDefinition Width="230*"/>
 			</Grid.ColumnDefinitions>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="28*"/>
@@ -120,11 +123,11 @@
 		<Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
 			<Grid.RowDefinitions>
 				<RowDefinition Height="*"/>
-				<RowDefinition Height="50"/>
+				<RowDefinition Height="35"/>
 			</Grid.RowDefinitions>
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="200"/>
-				<ColumnDefinition Width="200"/>
+				<ColumnDefinition Width="220"/>
+				<ColumnDefinition Width="220"/>
 				<ColumnDefinition Width="*"/>
 			</Grid.ColumnDefinitions>
 			<DataGrid Grid.ColumnSpan="3" x:Name="DgTests" IsReadOnly="True" AutoGenerateColumns="False" Margin="5,0,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ItemsSource="{Binding TestResults}"
@@ -161,11 +164,11 @@
 								</Style>
 							</DataGrid.ItemContainerStyle>
 							<DataGrid.Columns>
-								<DataGridTextColumn Width="270" Header="Display Name" Binding="{Binding DisplayName}" />
-								<DataGridTemplateColumn Width="200" Header ="Outcome" CellTemplate="{StaticResource TestOutcomePresenter}" SortMemberPath="TestOutcome" CanUserSort="True" />
+								<DataGridTextColumn Width="470" Header="Display Name" Binding="{Binding DisplayName}" />
+								<DataGridTemplateColumn Width="100" Header ="Outcome" CellTemplate="{StaticResource TestOutcomePresenter}" SortMemberPath="TestOutcome" CanUserSort="True" />
+								<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
 								<DataGridTextColumn Width="100" Header="StartTime" Binding="{Binding StartTime, Converter={converters:DateTimeWithTimeConverter}}" />
 								<DataGridTextColumn Width="100" Header="EndTime" Binding="{Binding EndTime, Converter={converters:DateTimeWithTimeConverter}}" />
-								<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
 							</DataGrid.Columns>
 						</DataGrid>
 					</DataTemplate>
@@ -187,13 +190,13 @@
 							</Style>
 						</DataGridTextColumn.ElementStyle>
 					</DataGridTextColumn>
-					<DataGridTextColumn Width="150" Header="Class Name" Binding="{Binding FullClassName}" />
-					<DataGridTextColumn Width="100" Header="Test Case Name" Binding="{Binding Name}" />
+					<DataGridTextColumn Width="200" Header="Class Name" Binding="{Binding FullClassName}" />
+					<DataGridTextColumn Width="250" Header="Test Case Name" Binding="{Binding Name}" />
 					<DataGridTemplateColumn Width="100" Header ="Outcome" CellTemplate="{StaticResource TestOutcomePresenter}"  SortMemberPath="TestOutcome" CanUserSort="True" />
 					<DataGridTextColumn Width="100" Header="Categories" Binding="{Binding Categories}"/>
+					<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
 					<DataGridTextColumn Width="100" Header="StartTime" Binding="{Binding StartTime, Converter={converters:DateTimeWithTimeConverter}}" />
 					<DataGridTextColumn Width="100" Header="EndTime" Binding="{Binding EndTime, Converter={converters:DateTimeWithTimeConverter}}" />
-					<DataGridTextColumn Width="100" Header="Duration (in sec)" Binding="{Binding DurationInSeconds}" />
 				</DataGrid.Columns>
 			</DataGrid>
 			<Button Grid.Row="1" Grid.Column="0" x:Name="BtnVisualizeDependencies" Content="Visualize Dependencies" HorizontalAlignment="Stretch" Margin="5,5,0,0" VerticalAlignment="Top" Command="{Binding VisualizeDependenciesCommand}" IsEnabled="{Binding DependenciesVisualizationAvailable}"/>
@@ -214,11 +217,11 @@
 				</ItemsPanelTemplate>
 			</StatusBar.ItemsPanel>
 			<StatusBarItem>
-				<TextBlock x:Name="TbStatus" Text="{Binding RunStatus}" />
+				<TextBlock FontSize="{Binding FontSize}" x:Name="TbStatus" Text="{Binding RunStatus}" />
 			</StatusBarItem>
 			<Separator Grid.Column="1" />
 			<StatusBarItem Grid.Column="4">
-				<ProgressBar x:Name="PbStatus" Margin="0,0,5,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsIndeterminate="{Binding IsRunning}" Height="20" Width="100" BorderBrush="{StaticResource BorderColor}" Background="White" />
+				<ProgressBar x:Name="PbStatus" Margin="0,0,5,0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsIndeterminate="{Binding IsRunning}" Height="25" Width="150" BorderBrush="{StaticResource BorderColor}" Background="White" />
 			</StatusBarItem>
 		</StatusBar>
 	</Grid>
