--- a/RTSFramework/RTSFramework.GUI/MainWindow.xaml
+++ b/RTSFramework/RTSFramework.GUI/MainWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:utilities="clr-namespace:RTSFramework.GUI.Utilities"
-        xmlns:models="clr-namespace:RTSFramework.Contracts.Models;assembly=RTSFramework.Contracts"
         xmlns:converters="clr-namespace:RTSFramework.GUI.Converters"
         xmlns:viewModels="clr-namespace:RTSFramework.ViewModels;assembly=RTSFramework.ViewModels"
         xmlns:runConfig="clr-namespace:RTSFramework.ViewModels.RunConfigurations;assembly=RTSFramework.ViewModels"
@@ -23,10 +22,6 @@
 				<TextBlock Text="{Binding TestOutcome}" Grid.Column="1" Margin="5,0,0,0"/>
 			</Grid>
 		</DataTemplate>
-		<Style TargetType="{x:Type ComboBox}">
-			<Setter Property="Height" Value="30" />
-			<Setter Property="VerticalContentAlignment" Value="Center"/>
-		</Style>
 	</Window.Resources>
 
 	<Window.TaskbarItemInfo>
@@ -73,17 +68,14 @@
 
 			<TextBox x:Name="TbSolutionFilePath" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding SolutionFilePath}" Margin="0,0,30,0" Grid.Row="0" Grid.Column="1"/>
 			<Button x:Name="BtnSelectSolutionFile" Command="{Binding SelectSolutionFileCommand}" Content="..." HorizontalAlignment="Right" VerticalAlignment="Center" Width="25" Grid.Column="1" Grid.Row="0" />
-			<ComboBox x:Name="CbProgramModelType" VerticalAlignment="Center" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type runConfig:ProgramModelType}}}" SelectedItem="{Binding ProgramModelType}" Grid.Row="1" Grid.Column="1" />
-			<ComboBox x:Name="CbTestType" VerticalAlignment="Center" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type runConfig:TestType}}}" SelectedItem="{Binding TestType}" Grid.Row="2" Grid.Column="1" />
+			<ComboBox x:Name="CbProgramModelType" Height ="30" VerticalContentAlignment="Center" VerticalAlignment="Center" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type runConfig:ProgramModelType}}}" SelectedItem="{Binding ProgramModelType}" Grid.Row="1" Grid.Column="1" />
+			<ComboBox x:Name="CbTestType" Height ="30" VerticalContentAlignment="Center" VerticalAlignment="Center" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type runConfig:TestType}}}" SelectedItem="{Binding TestType}" Grid.Row="2" Grid.Column="1" />
 			<CheckBox x:Name="CbDiscoverNewTests" IsEnabled="False" Grid.Row="2" Grid.Column="2" Margin="5,0,0,0" VerticalAlignment="Center" IsChecked="{Binding DiscoverNewTests}">Discover new tests?</CheckBox>
-			<ComboBox x:Name="CbDiscoveryType" VerticalAlignment="Center" ItemsSource="{Binding DiscoveryTypes}" SelectedItem="{Binding DiscoveryType}" Grid.Row="3" Grid.Column="1" />
-			<ComboBox x:Name="CbRTSApproachType" VerticalAlignment="Center" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type runConfig:RTSApproachType}}}" SelectedItem="{Binding RTSApproachType}" Grid.Row="4" Grid.Column="1" />
-			<ComboBox x:Name="CbProcessingType" VerticalAlignment="Center" ItemsSource="{Binding ProcessingTypes}" SelectedItem="{Binding ProcessingType}" Grid.Row="5" Grid.Column="1" />
+			<ComboBox x:Name="CbDiscoveryType" Height ="30" VerticalContentAlignment="Center" VerticalAlignment="Center" ItemsSource="{Binding DiscoveryTypes}" SelectedItem="{Binding DiscoveryType}" Grid.Row="3" Grid.Column="1" />
+			<ComboBox x:Name="CbRTSApproachType" Height ="30" VerticalContentAlignment="Center" VerticalAlignment="Center" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type runConfig:RTSApproachType}}}" SelectedItem="{Binding RTSApproachType}" Grid.Row="4" Grid.Column="1" />
+			<ComboBox x:Name="CbProcessingType" Height ="30" VerticalContentAlignment="Center" VerticalAlignment="Center" ItemsSource="{Binding ProcessingTypes}" SelectedItem="{Binding ProcessingType}" Grid.Row="5" Grid.Column="1" />
 
 			<Label x:Name="LblRepositoryPath" Content="Repository Path:" HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="{Binding IsRepositoryPathChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="1" Grid.Column="2" Margin="0,1" />
-			<Label x:Name="LblGranularityLevel" Content="Granularity Level:" HorizontalAlignment="Left" VerticalAlignment="Center" Visibility="{Binding IsGranularityLevelChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="4" Grid.Column="2"/>
-
-			<ComboBox x:Name="CbGranularityLevel" VerticalAlignment="Center" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type models:GranularityLevel}}}" SelectedItem="{Binding GranularityLevel}" Visibility="{Binding IsGranularityLevelChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="4" Grid.Column="3" />
 
 			<TextBox x:Name="TbRepositoryPath" VerticalContentAlignment="Center" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding RepositoryPath}" Visibility="{Binding IsRepositoryPathChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Margin="0,0,30,0" Grid.Column="3"  Grid.Row="1" />
 			<Button x:Name="BtnSelectRepositoryPath" Command="{Binding SelectRepositoryCommand}" Content="..." HorizontalAlignment="Right" VerticalAlignment="Center" Visibility="{Binding IsRepositoryPathChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Column="3" Width="25" Grid.Row="1" />
@@ -93,8 +85,8 @@
 			<TextBox x:Name="TbCsvTestsFile" VerticalContentAlignment="Center" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding CsvTestsFile}" Visibility="{Binding IsCsvTestsFileSelectable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Margin="2,0,30,0" Grid.Column="2"  Grid.Row="2" />
 			<Button x:Name="BtnSelectCsvTestsFile" Command="{Binding SelectCsvTestsFileCommand}" Content="..." HorizontalAlignment="Right" VerticalAlignment="Center" Visibility="{Binding IsCsvTestsFileSelectable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Width="25" Grid.Column="2"  Grid.Row="2" />
 
-			<ComboBox x:Name="CbFromCommit" VerticalAlignment="Center" ItemsSource="{Binding FromCommitModels}" SelectedItem="{Binding FromCommit}" Visibility="{Binding IsFromCommitChangeable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="3" Grid.Column="2" Margin="2,0,2,0" DisplayMemberPath="DisplayName" />
-			<ComboBox x:Name="CbToCommit" VerticalAlignment="Center" ItemsSource="{Binding ToCommitModels}" SelectedItem="{Binding ToCommit}" Visibility="{Binding IsToCommitChangeable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="3" Grid.Column="3" Margin="2,0,2,0" DisplayMemberPath="DisplayName" />
+			<ComboBox x:Name="CbFromCommit" Height ="30" VerticalContentAlignment="Center" VerticalAlignment="Center" ItemsSource="{Binding FromCommitModels}" SelectedItem="{Binding FromCommit}" Visibility="{Binding IsFromCommitChangeable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="3" Grid.Column="2" Margin="2,0,2,0" DisplayMemberPath="DisplayName" />
+				<ComboBox x:Name="CbToCommit" Height ="30" VerticalContentAlignment="Center" VerticalAlignment="Center" ItemsSource="{Binding ToCommitModels}" SelectedItem="{Binding ToCommit}" Visibility="{Binding IsToCommitChangeable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="3" Grid.Column="3" Margin="2,0,2,0" DisplayMemberPath="DisplayName" />
 
 			<CheckBox x:Name="CbWithTimeLimit"  Grid.Row="0" Grid.Column="2" Margin="5,0,0,0" VerticalAlignment="Center" IsChecked="{Binding WithTimeLimit}">With time limit?</CheckBox>
 			<TextBox x:Name="TbTimeLimit" PreviewTextInput="NumberValidationTextBox" VerticalContentAlignment="Center" TextWrapping="NoWrap" VerticalAlignment="Center" Text="{Binding TimeLimit}" IsEnabled="{Binding WithTimeLimit}" Margin="0,0,30,0" Grid.Column="3"  Grid.Row="0" />
@@ -156,6 +148,7 @@
 				</DataGrid.ItemContainerStyle>
 				<DataGrid.RowDetailsTemplate>
 					<DataTemplate DataType="viewModels:TestResultListViewItemViewModel">
+						<!-- ReSharper disable once Xaml.BindingWithContextNotResolved -->
 						<DataGrid IsReadOnly="True" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding ChildResults}" SelectedItem="{Binding SelectedChild}">
 							<DataGrid.ItemContainerStyle >
 								<Style TargetType="DataGridRow" >
